# mini-bankruptcy

./: README.md  pyproject.toml
src/backend/: boot.py  config.py  main.py  messages_chat.py  roles.py  tools.py
src/backend/roles/: base.py  manager.py  tools.py
