[project]
name = "mini-bankruptcy"
version = "0.1.0"
description = "A team of software agents that'll build what you want them to."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.4",
    "langchain-google-genai>=4.2.4",
    "langchain-groq>=1.1.2",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
