[project]
name = "mini-bankruptcy"
version = "0.1.0"
description = "A team of software agents that'll build what you want them to."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.4",
    "langchain-google-genai>=4.2.4",
    "langchain-groq>=1.1.2",
    "platformdirs>=4.10.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]



